# old_hacksaw_fingers

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  DIAGNOSTIC_REPORT.md  FRONTEND_RESTORED.md  GEMINI.md  Makefile  POST_PUSH_VERIFICATION.md  PROJECT_STRUCTURE_CLEANED.md  README.md  RESTRUCTURE_COMPLETE.md  ai_brain.py  gateway.py  habits.py  launch_kilo_ai.sh  library_of_truth.py  meds.py  ml_engine.py  multi_camera_manager.py  project-status-report.md  prompt for claude  pytest.ini  reminder.py  requirements-ci.txt  usb_transfer.py  voice.py
.github/: CODEOWNERS
Kilo_K3S_parts/: #script#  BROWSER_ACCESS_GUIDE.md  CLEAN_SYSTEM_REPORT.md  FRONTEND_STATUS_REPORT.md  SYSTEM_FIXED_REPORT.md  TABLET_INTEGRATION_GUIDE.md  build-socketio.sh  fix-image-pull-policy.sh  import-images-to-k3s.sh  port list for 192.168.68.64  rebuild-meds.sh  remove-docker.sh  setup-kubectl-alias.sh  start-kilo-system.sh  test-all-endpoints.sh  test-frontend-endpoints.sh  verify-system.sh
diagrams/: system_flow.mmd  system_flow_fixed.mmd  system_flow_simple.mmd
docs/: AI_LEARNING_PLAN.md  BEELINK_DEPLOYMENT.md  CAMERA_SETUP.md  CHANGELOG.md  CLEANUP_COMPLETION_REPORT.md  CODE_OF_CONDUCT.md  COMPLETE_PROJECT_SUMMARY.md  DARK_THEME_UPDATE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  EXTERNAL_CAMERA_IMPLEMENTATION.md  EXTERNAL_MULTI_CAMERA_MONITORING.md  FRONTEND_COMPLETE_SUMMARY.md  FRONTEND_IMPLEMENTATION_PLAN.md  FULLY_KIOSK_SETUP.md  GATEWAY_MULTIPART_BUG_FIX.md  IMPLEMENTATION_SUMMARY.md  INVESTOR_PRESENTATION.md  K3S_ACCESS_GUIDE.md  K8S_AUDIT_REPORT.md  K8S_HARDENING_SUMMARY.md  MULTI_CAMERA_SYSTEM.md  OPERATIONS.md  PERFORMANCE_IMPROVEMENTS.md  PERSISTENT_STORAGE_SETUP.md  POD_HEALTH_REPORT.md  QUALITY_ASSURANCE_README.md  QUICK_START.md  README.md  README_AIRGAP.md  README_STT_TTS.md  (+20 more)
services/ai_brain/: Dockerfile  README.md  README_ORCHESTRATION.md  __init__.py  async_processing.py  conversation_management.py  data_partitioning.py  db.py  embeddings.py  encryption.py  enhancement_plan.py  knowledge_graph.py  main.py  memory_consolidation.py  memory_search.py  models.py  orchestrator.py  predictive_modeling.py  pyproject.toml  rag.py  startup_checks.py  test_integration.py  test_phase3_4.py
services/ai_brain/models/: README.md  __init__.py
services/ai_brain/tests/: test_memory_ingest.py  test_metrics.py  test_orchestration_optout_anomaly.py  test_orchestrator.py  test_orchestrator_mount.py
services/ai_brain/utils/: network.py
services/cam/: Dockerfile  camera_offline_test_results.json  download_model.py  download_model.sh  main.py  pyproject.toml  test_comprehensive.py  test_enhancements.py  test_integration.py  test_offline.py  test_ptz.py  wait-for.sh
services/cam/tests/: test_cam_features.py
services/financial/: Dockerfile  db.py  main.py  pyproject.toml  wait-for-advanced.py  wait-for-advanced.sh  wait-for.sh
services/financial/alembic/: env.py  script.py.mako
services/financial/alembic/versions/: 0001_add_category.py
services/financial/gateway/: Dockerfile  admin_client.py  main.py  wait-for.sh
services/financial/gateway/tests/: __init__.py
services/financial/scripts/: add_category_column_if_missing.py  run_alembic_upgrade.py
services/financial/tests/: __init__.py  test_acceptance_e2e.py  test_admin_auth_and_scheduler.py  test_categorization.py  test_financial_endpoints.py  test_migration_status.py  test_outgoing_posts.py  test_recategorize.py  test_receipt_parsing_and_analytics.py
services/gateway/: main.py  pyproject.toml
services/gateway/tests/: test_admin_endpoints.py
services/habits/: Dockerfile  main.py  pyproject.toml  wait-for-advanced.sh  wait-for.sh
services/library_of_truth/: main.py  pyproject.toml  wait-for-advanced.sh  wait-for.sh
services/library_of_truth/books/pg1727-h/: pg1727-images.html
services/library_of_truth/books/pg228-h/: pg228-images.html
services/library_of_truth/books/pg6130-h/: pg6130-images.html
services/library_of_truth/books/pg65903-h/: pg65903-images.html
services/meds/: Dockerfile  main.py  pyproject.toml  wait-for-advanced.py  wait-for-advanced.sh  wait-for.sh
services/reminder/: Dockerfile  db.py  main.py  pyproject.toml
services/reminder/tests/: __init__.py  test_presets.py  test_recurrence.py  test_reminder_features.py
services/usb_transfer/: Dockerfile  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  usb_service.py
services/usb_transfer/tests/: test_usb_transfer.py
(+135 files in other folders)
