[tool.poetry]
name = "ai_brain"
version = "0.1.0"
description = "AI Brain microservice"
authors = ["Kilo <kilo@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.100"
uvicorn = "^0.22"
sqlmodel = "^0.0.8"
pytesseract = "^0.3.10"
pillow = "^10.0.0"
requests = "^2.31.0"
python-multipart = "^0.0.9"
gTTS = "^2.3.0"
openai = "^1.0.0"
tenacity = "^8.2.2"
apscheduler = "^3.10.1"
prometheus-client = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
