[tool.poetry]
name = "cam"
version = "0.1.0"
description = "Camera microservice"
authors = ["Kilo <kilo@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.100"
uvicorn = "^0.22"
pytesseract = "^0.3.10"
pillow = "^10.0.0"
httpx = "^0.27.0"
mediapipe = "^0.10.11"
opencv-python-headless = "^4.9.0.80"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
