[tool.poetry]
name = "financial"
version = "0.1.0"
description = "Financial microservice"
authors = ["Kilo <kilo@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.100"
uvicorn = "^0.22"
sqlmodel = "^0.0.8"
httpx = "^0.27.0"
Pillow = "^10.3.0"
pytesseract = "^0.3.10"
python-multipart = "^0.0.9"
alembic = "^1.11"
APScheduler = "^3.10"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
