[tool.poetry]
name = "gateway"
version = "0.1.0"
description = "API Gateway for kilos-memory microservices"
authors = ["Kilo <kilo@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.100"
uvicorn = "^0.22"
httpx = "^0.27.0"
sqlmodel = "^0.0.8"
bcrypt = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
