[tool.poetry]
name = "library_of_truth"
version = "0.1.0"
description = "Library of Truth microservice"
authors = ["Kilo <kilo@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.100"
uvicorn = "^0.22"
sqlmodel = "^0.0.8"
pdfplumber = "^0.11.0"
beautifulsoup4 = "^4.12.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
